# LLM-Analyzer

./: .gitignore  Makefile  README.md  prompts.txt  pyproject.toml
llm_analyzer/: __init__.py  cli.py  extract.py  hf.py  kernel_graph.py  onnx_export.py  render.py  schema.py
model_lists/: evaluated_models.txt
outputs/Qwen_Qwen3.5-122B-A10B/ir/: architecture.json
outputs/Qwen_Qwen3.5-122B-A10B/overview/: model.mmd
outputs/Qwen_Qwen3.5-397B-A17B/ir/: architecture.json
outputs/Qwen_Qwen3.5-397B-A17B/overview/: model.mmd
outputs/XiaomiMiMo_MiMo-V2-Flash/ir/: architecture.json
outputs/XiaomiMiMo_MiMo-V2-Flash/overview/: model.mmd
outputs/XiaomiMiMo_MiMo-V2.5-Base/ir/: architecture.json
outputs/XiaomiMiMo_MiMo-V2.5-Base/overview/: model.mmd
outputs/bigscience_bloom/ir/: architecture.json
outputs/bigscience_bloom/overview/: model.mmd
outputs/deepseek-ai_DeepSeek-V4-Pro/ir/: architecture.json
outputs/deepseek-ai_DeepSeek-V4-Pro/overview/: model.mmd
outputs/meta-llama_Llama-4-Maverick-17B-128E/ir/: architecture.json
outputs/meta-llama_Llama-4-Maverick-17B-128E/overview/: model.mmd
outputs/mistralai_Mistral-Medium-3.5-128B/ir/: architecture.json
outputs/mistralai_Mistral-Medium-3.5-128B/overview/: model.mmd
outputs/moonshotai_Kimi-K2.5/ir/: architecture.json
outputs/moonshotai_Kimi-K2.5/overview/: model.mmd
research/: kimi_k2_mla_attention.md
tests/: test_extract.py
tests/fixtures/: deepseek_v4_config.json  glm_moe_dsa_config.json  hy3_config.json  kimi_k25_config.json  llama4_config.json  mimo_v2_config.json  mimo_v2_flash_config.json
(+155 files in other folders)
